Test with electron

--- a/package.json
+++ b/package.json
@@ -55,6 +55,11 @@
         }
       ]
     },
+    "nsis": {
+      "allowToChangeInstallationDirectory": true,
+      "perMachine": true,
+      "oneClick": false
+    },
     "win": {
       "target": [
         "nsis"
@@ -186,9 +191,13 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "electron-debug": "^1.1.0",
     "font-awesome": "^4.7.0",
     "history": "^4.6.1",
+    "node-hid": "^0.5.4",
+    "node-pre-gyp": "^0.6.34",
+    "qs": "^6.4.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "3.0.0-beta.6",
